--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	script
+		var socket = io.connect('http://localhost:3000');
+		socket.on('chat', function (data) {
+			console.log(data);
+			socket.emit('chat response', {my: 'chat response to you'});
+		});
