--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css')
     script(src="/socket.io/socket.io.js")
+
   body
     block content
+  script(src="/javascripts/app.js")
